# cassava-leaf-disease-classification

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
cassava/: app.py  augment.py  cli.py  config.py  dataset.py  loss.py  utils.py
docs/: iglovikov-trained-model-what-is-next.md
tests/: test_augment.py  test_cli.py  test_config.py  test_loss.py  test_model.py  test_utils.py
